<resources>
    <string name="app_name">Musical Structure</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search Music Player</string>
    <string name="user_name">User Name</string>
    <string name="user_email">Email Address</string>
    <string name="music_library">Music Library</string>
    <string name="resume_last_song">Open now playing or resume last played song in Music Player.</string>
    <string name="open">Open</string>
    <string name="play_song">Play selected song</string>
    <string name="song_list">Songs List</string>
    <string name="player">Music Player</string>
    <string name="recent_activity">Recent Activity</string>
    <string name="stop">Stop</string>
    <string name="close">Close</string>
    <string name="search">Search</string>
    <string name="send">Send</string>
    <string name="albums">Albums</string>
    <string name="artists">Artists</string>
    <string name="play_lists">Play Lists</string>
    <string name="songs">Songs</string>
    <string name="description">Description</string>
    <string name="hurdles">Hurdles</string>
    <string name="solution">Solution</string>
    <string name="player_description">Selected song/track will be played here. Track control options will be implemented to provide user friendly experience.</string>
    <string name="hurdles_player">Songs should be played even the app is minimized.</string>
    <string name="solution_player">Background Service or thread will be used to play the song and a notification with control options will be displayed for convenience.</string>
    <string name="songs_description">All the Songs/Audios/Tracks are displayed here. You can select any song to play.</string>
    <string name="albums_description">Songs are categorised based on Albums. You can select an Album to view the list of tracks which can be listened.</string>
    <string name="artists_description">Songs are categorised based on Artists. You can select an Artist to view the list of tracks which can be listened.</string>
    <string name="play_lists_description">Songs are categorised in Play Lists. You can create new Play Lists and add your favourite songs.</string>
    <string name="hurdles_song_scan">Songs in a users device need to be scanned and grouped in </string>
    <string name="solution_song_scan">Background threads or Services can be used to scan the songs/audio in the device storage which will not affect the performance of Main UI thread.</string>
    <string name="hurdles_play_list_details">Song information need to be persisted in order to access whenever needed form </string>
    <string name="solution_play_list_details">Content Providers can be used to save the Play List information.</string>
    <string name="recent_description">All the recently played or added Songs/Audios/Tracks are displayed here. You can select any song to play.</string>
    <string name="hurdles_recent_activity">Recently played Songs/Tracks information need to be persisted in order to access whenever needed form</string>
    <string name="solution_recent_activity">Content Providers can be used to save the Recent Activity information.</string>
    <string name="search_result_description">Songs/Tracks will be listed here for the search query</string>
    <string name="settings_description">All the settings and options will be displayed here in order to change the preferences.</string>
    <string name="share_description">Share functionality to share app information with others.</string>
    <string name="send_description">Send functionality to send app information through email, sms, etc.</string>
</resources>
