<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/nav_music_library"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/music_library" />
        <item
            android:id="@+id/nav_recent"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/recent_activity" />

        <item
            android:id="@+id/nav_share"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/search" />
        <item
            android:id="@+id/nav_send"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/send" />

    </group>

</menu>
